fix labels in login menu in header - hebrew being aligned to left

--- a/public/stylesheets/extra.css
+++ b/public/stylesheets/extra.css
@@ -898,3 +898,6 @@ ul.contact-tabset li.active a ,
 .boxe .heading .edit .drop ul a {
 	width: 114px;
 }
+.hebrew .subnav .inner-box .form-row{
+	width: 200px;
+}
